--- a/ui_Files/MainApp.ui
+++ b/ui_Files/MainApp.ui
@@ -430,14 +430,7 @@
          </layout>
         </item>
         <item>
-         <widget class="QLabel" name="label_3">
-          <property name="text">
-           <string>Under Devlopment...</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QWidget" name="widget" native="true">
+         <widget class="CirculationApp" name="circulationApp" native="true">
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -488,6 +481,12 @@
    <class>TimeSeriesApp</class>
    <extends>QWidget</extends>
    <header>ui_Classes/TimeSeriesApp.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>CirculationApp</class>
+   <extends>QWidget</extends>
+   <header>ui_Classes/CirculationApp.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
