--- a/ui_Files/circulationapp.ui
+++ b/ui_Files/circulationapp.ui
@@ -33,6 +33,9 @@
              <pointsize>10</pointsize>
             </font>
            </property>
+           <property name="calendarPopup">
+            <bool>true</bool>
+           </property>
            <property name="date">
             <date>
              <year>2016</year>
@@ -271,7 +274,7 @@
             <number>9999</number>
            </property>
            <property name="value">
-            <number>230</number>
+            <number>250</number>
            </property>
           </widget>
          </item>
