Added naming conventions for Circulation app output

--- a/ui_Files/circulationapp.ui
+++ b/ui_Files/circulationapp.ui
@@ -128,6 +128,9 @@
              <pointsize>10</pointsize>
             </font>
            </property>
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
            <property name="minimum">
             <number>-9999</number>
            </property>
@@ -173,6 +176,9 @@
             <font>
              <pointsize>10</pointsize>
             </font>
+           </property>
+           <property name="readOnly">
+            <bool>true</bool>
            </property>
            <property name="minimum">
             <number>-9999</number>
@@ -221,6 +227,9 @@
              <pointsize>10</pointsize>
             </font>
            </property>
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
            <property name="minimum">
             <number>-9999</number>
            </property>
@@ -266,6 +275,9 @@
             <font>
              <pointsize>10</pointsize>
             </font>
+           </property>
+           <property name="readOnly">
+            <bool>true</bool>
            </property>
            <property name="minimum">
             <number>-9999</number>
